--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-ble-plx": "^2.0.2",
-    "react-native-bluetooth-serial": "^1.0.0-rc1"
+    "react-native-bluetooth-serial": "^1.0.0-rc1",
+    "react-native-tts": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
